Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-28534

clang-12 compile warnings in bb.org amd64-ubuntu-2004-msan builder

Details

    Description

      clang-12 warning upgrade to errors:

      https://buildbot.mariadb.org/#/builders/348/builds/949/steps/6/logs/stdio (10.5)

      In file included from /buildbot/amd64-ubuntu-2004-msan/build/storage/blackhole/ha_blackhole.cc:26:
      In file included from /buildbot/amd64-ubuntu-2004-msan/build/sql/sql_class.h:597:
      In file included from /buildbot/amd64-ubuntu-2004-msan/build/sql/sql_lex.h:35:
      /buildbot/amd64-ubuntu-2004-msan/build/sql/item.h:6478:12: error: 'val_datetime_packed' overrides a member function but is not marked 'override' [-Werror,-Winconsistent-missing-override]
        longlong val_datetime_packed(THD *thd)
                 ^
      /buildbot/amd64-ubuntu-2004-msan/build/sql/item.h:3501:12: note: overridden virtual function is here
        longlong val_datetime_packed(THD *thd) override;
                 ^
      /buildbot/amd64-ubuntu-2004-msan/build/sql/item.h:6480:12: error: 'val_time_packed' overrides a member function but is not marked 'override' [-Werror,-Winconsistent-missing-override]
        longlong val_time_packed(THD *thd)
                 ^
      /buildbot/amd64-ubuntu-2004-msan/build/sql/item.h:3502:12: note: overridden virtual function is here
        longlong val_time_packed(THD *thd) overri
      

      https://buildbot.mariadb.org/#/builders/348/builds/931/steps/6/logs/stdio (10.6)

      In file included from /buildbot/amd64-ubuntu-2004-msan/build/storage/innobase/btr/btr0btr.cc:28:
      In file included from /buildbot/amd64-ubuntu-2004-msan/build/storage/innobase/include/btr0btr.h:30:
      In file included from /buildbot/amd64-ubuntu-2004-msan/build/storage/innobase/include/dict0dict.h:31:
      In file included from /buildbot/amd64-ubuntu-2004-msan/build/storage/innobase/include/data0data.h:31:
      In file included from /buildbot/amd64-ubuntu-2004-msan/build/storage/innobase/include/data0type.h:585:
      In file included from /buildbot/amd64-ubuntu-2004-msan/build/storage/innobase/include/data0type.inl:27:
      In file included from /buildbot/amd64-ubuntu-2004-msan/build/storage/innobase/include/mach0data.h:32:
      In file included from /buildbot/amd64-ubuntu-2004-msan/build/storage/innobase/include/mtr0types.h:29:
      /buildbot/amd64-ubuntu-2004-msan/build/storage/innobase/include/buf0types.h:149:23: error: 'constexpr' non-static member function will not be implicitly 'const' in C++14; add 'const' to avoid a change in behavior [-Werror,-Wconstexpr-not-const]
        constexpr ulonglong raw() { return m_id; }
                            ^
                                  const
      In file included from /buildbot/amd64-ubuntu-2004-msan/build/extra/mariabackup/ds_local.cc:26:
      In file included from /buildbot/amd64-ubuntu-2004-msan/build/storage/innobase/include/fsp0fsp.h:32:
      In file included from /buildbot/amd64-ubuntu-2004-msan/build/storage/innobase/include/fut0lst.h:33:
      In file included from /buildbot/amd64-ubuntu-2004-msan/build/storage/innobase/include/fut0fut.h:31:
      In file included from /buildbot/amd64-ubuntu-2004-msan/build/storage/innobase/include/mtr0mtr.h:30:
      In file included from /buildbot/amd64-ubuntu-2004-msan/build/storage/innobase/include/fil0fil.h:31:
      In file included from /buildbot/amd64-ubuntu-2004-msan/build/storage/innobase/include/mach0data.h:32:
      In file included from /buildbot/amd64-ubuntu-2004-msan/build/storage/innobase/include/mtr0types.h:29:
      /buildbot/amd64-ubuntu-2004-msan/build/storage/innobase/include/buf0types.h:149:23: error: 'constexpr' non-static member function will not be implicitly 'const' in C++14; add 'const' to avoid a change in behavior [-Werror,-Wconstexpr-not-const]
        constexpr ulonglong raw() { return m_id; }
                            ^
                                  const
      In file included from /buildbot/amd64-ubuntu-2004-msan/build/storage/innobase/btr/btr0bulk.cc:27:
      In file included from /buildbot/amd64-ubuntu-2004-msan/build/storage/innobase/include/btr0bulk.h:30:
      In file included from /buildbot/amd64-ubuntu-2004-msan/build/storage/innobase/include/dict0dict.h:31:
      In file included from /buildbot/amd64-ubuntu-2004-msan/build/storage/innobase/include/data0data.h:31:
      In file included from /buildbot/amd64-ubuntu-2004-msan/build/storage/innobase/include/data0type.h:585:
      In file included from /buildbot/amd64-ubuntu-2004-msan/build/storage/innobase/include/data0type.inl:27:
      In file included from /buildbot/amd64-ubuntu-2004-msan/build/storage/innobase/include/mach0data.h:32:
      In file included from /buildbot/amd64-ubuntu-2004-msan/build/storage/innobase/include/mtr0types.h:29:
      /buildbot/amd64-ubuntu-2004-msan/build/storage/innobase/include/buf0types.h:149:23: error: 'constexpr' non-static member function will not be implicitly 'const' in C++14; add 'const' to avoid a change in behavior [-Werror,-Wconstexpr-not-const]
        constexpr ulonglong raw() { return m_id; }
                            ^
                                  const
      [ 37%] Building CXX object storage/federatedx/CMakeFiles/federatedx.dir/federatedx_io_null.cc.o
      1 error generated.
      make[2]: *** [extra/mariabackup/CMakeFiles/mbstream.dir/build.make:76: extra/mariabackup/CMakeFiles/mbstream.dir/ds_local.cc.o] Error 1
      make[1]: *** [CMakeFiles/Makefile2:3241: extra/mariabackup/CMakeFiles/mbstream.dir/all] Error 2
      
      

      Attachments

        Activity

          People

            danblack Daniel Black
            danblack Daniel Black
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.